# januskey

./: .editorconfig  .gitignore  .gitlab-ci.yml  .guix-channel  0-AI-MANIFEST.a2ml  0001-Add-A2ML-and-K9-MIME-types.patch  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  LICENSE  LICENSE.txt  META.scm  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TESTING-REPORT.adoc  TESTING-REPORT.scm  TOPOLOGY.md  codemeta.json  draft-hyperpolymath-maa-framework-00.txt  flake.nix  guix.scm  idrisiser.toml  justfile  k9iser.toml  llm-warmup-dev.md  (+3 more)
.github/workflows/: cargo-audit.yml  casket-pages.yml  codeql.yml  comprehensive-quality.yml  e2e.yml  guix-nix-policy.yml  hypatia-scan.yml  npm-bun-blocker.yml  quality.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  semgrep.yml  wellknown-enforcement.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile  threat-model.a2ml
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/bot_directives/: README.adoc  git-private-farm.a2ml  gitbot-fleet.a2ml  hypatia.a2ml
.machine_readable/contractiles/: Adjustfile.a2ml  Bustfile.a2ml  Dustfile.a2ml  Intentfile.a2ml  Justfile  Mustfile.a2ml  Trustfile.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/self-validating/: README.adoc  januskey-metadata.k9.ncl  methodology-guard.k9.ncl
.machine_readable/self-validating/examples/: project-metadata.k9.ncl
.machine_readable/svc/: README.adoc
.machine_readable/svc/k9/: januskey-metadata.k9.ncl
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
benches/: januskey_benchmarks.rs
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
crates/januskey-cli/: Cargo.toml
crates/januskey-cli/src/: attestation.rs  delta.rs  keys.rs  keys_cli.rs  lib.rs  main.rs  obliteration.rs  operations.rs
crates/januskey-cli/tests/: aspect_test.rs  concurrency_test.rs  e2e_test.rs  p2p_test.rs  property_tests.rs
crates/reversible-core/: Cargo.toml
crates/reversible-core/src/: content_store.rs  error.rs  lib.rs  manifest.rs  metadata.rs  transaction.rs
crates/reversible-core/tests/: property_tests.rs  unwrap_safety_test.rs
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
docs/reports/audit/: audit-2026-04-04.md
docs/security/: KEY_LIFECYCLE.adoc  THREAT_MODEL.adoc
docs/wiki/: Home.adoc
docs/wiki/api/: index.adoc
docs/wiki/architecture/: index.adoc
docs/wiki/examples/: index.adoc
docs/wiki/formal-proofs/: index.adoc
docs/wiki/guides/: cli.adoc  transactions.adoc
docs/wiki/operations/: index.adoc
docs/wiki/theory/: formal-model.adoc  index.adoc  maa-framework.adoc  mpr.adoc  rmo-primitive.adoc  rmr-primitive.adoc
ffi/zig/: build.zig
ffi/zig/include/: januskey.h
ffi/zig/src/: main.zig
ffi/zig/test/: integration_test.zig
idrisiser/: key-derivation.tsig  key-generation.tsig  wrap-unwrap.tsig
proofs/rocq/: _CoqProject
proofs/rocq/JanusKey/: Composition.v  ContentHash.v  ContentStore.v  FileSystem.v  GDPR.v  Obliteration.v  Operations.v  Preliminaries.v  RMO.v  RMR.v  Reversibility.v
src/abi/: Foreign.idr  Layout.idr  Proofs.idr  Types.idr
src/januskey/: Cargo.toml
src/januskey/src/: attestation.rs  backend.rs  backend_s3.rs  backend_ssh.rs  content_store.rs  delta.rs  error.rs  ffi.rs  keys.rs  keys_cli.rs  lib.rs  main.rs  metadata.rs  obliteration.rs  operations.rs  transaction.rs
src/tui/: januskey_tui.gpr
src/tui/src/: januskey_obliteration.adb  januskey_obliteration.ads  januskey_operations.adb  januskey_operations.ads  januskey_tui.adb  (+1 more)
tests/aspect/: cross_cutting_test.sh
tests/e2e/: lifecycle_e2e.sh
tests/fuzz/: README.adoc
tests/p2p/: component_p2p_test.rs
tests/regressions/: README.adoc
