# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "januskey"
version = "1.0.0"
description = "Provably reversible file operations through Maximal Principle Reduction"
keywords = ["reversible", "filesystem", "transactions", "undo", "backup"]
categories = ["command-line-utilities", "filesystem"]
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reversible-core = { path = "../reversible-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
hex = "0.4"
flate2 = "1"
dirs = "5"
walkdir = "2"
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
glob = "0.3"
whoami = "1"

# Key management dependencies
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { workspace = true }
hex = { workspace = true }

[[bench]]
name = "januskey_benchmarks"
harness = false
path = "../../benches/januskey_benchmarks.rs"

[[bin]]
name = "jk"
path = "src/main.rs"

[[bin]]
name = "jk-keys"
path = "src/keys_cli.rs"
